moved hebrew letter info into hebrew letter definition <ש#65412>

--- a/wiki/%D7%A9.wikitext
+++ b/wiki/%D7%A9.wikitext
@@ -1,1 +1,7 @@
-#REDIRECT [[shin]]
+===Letter===
+'''&#1513;''' (spelled ''[[shin]]'') is the twentysecond letter of the [[Hebrew]] alphabet.
+
+* '''Last''': [[&#1512;]]
+* '''Next''': [[&#1514;]]
+
+[[Category:Hebrew letters]]
