moved hebrew letter info into hebrew letter definition <ת#65413>

--- a/wiki/%D7%AA.wikitext
+++ b/wiki/%D7%AA.wikitext
@@ -1,1 +1,6 @@
-#REDIRECT [[tav]]
+===Letter===
+'''&#1514;''' (spelled ''[[tav]]'') is the twentythird letter of the [[Hebrew]] alphabet.
+
+* '''Last''': [[&#1513;]]
+
+[[Category:Hebrew letters]]
