bad counting; 14th -> 15th <ס#65404>

--- a/wiki/%D7%A1.wikitext
+++ b/wiki/%D7%A1.wikitext
@@ -1,5 +1,5 @@
 ===Letter===
-'''&#1505;''' (spelled ''[[samekh]]'') is the fourteenth letter of the [[Hebrew]] alphabet.
+'''&#1505;''' (spelled ''[[samekh]]'') is the fifteenth letter of the [[Hebrew]] alphabet.
 
 * '''Last''': [[&#1504;]]
 * '''Next''': [[&#1506;]]
