--- a/wiki/hardcore.wikitext
+++ b/wiki/hardcore.wikitext
@@ -1,6 +1,7 @@
 ==English==
+===Adjective===
+# An extreme dedication to a certain activity.  ie. He's a hardcore gamer.
 ===Noun===
 # (''pornography'')of or pertaining to pornography that depicts penetration.
-
 ===See also===
 *[[hard-core]] (''adj.'')
