--- a/wiki/%D7%A8.wikitext
+++ b/wiki/%D7%A8.wikitext
@@ -1,5 +1,5 @@
 ===Letter===
-'''&#1512;''' (spelled ''[[resh]]'') is the twentyfirst letter of the [[Hebrew]] alphabet.
+'''&#1512;''' (spelled ''[[resh]]'') is the twentieth letter of the [[Hebrew]] alphabet.
 
 * '''Last''': [[&#1511;]]
 * '''Next''': [[&#1513;]]
