--- a/wiki/%D7%A9.wikitext
+++ b/wiki/%D7%A9.wikitext
@@ -1,5 +1,5 @@
 ===Letter===
-'''&#1513;''' (spelled ''[[shin]]'') is the twentysecond letter of the [[Hebrew]] alphabet.
+'''&#1513;''' (spelled ''[[shin]]'') is the twentyfirst letter of the [[Hebrew]] alphabet.
 
 * '''Last''': [[&#1512;]]
 * '''Next''': [[&#1514;]]
