--- a/wiki/%D7%AA.wikitext
+++ b/wiki/%D7%AA.wikitext
@@ -1,5 +1,5 @@
 ===Letter===
-'''&#1514;''' (spelled ''[[tav]]'') is the twentythird letter of the [[Hebrew]] alphabet.
+'''&#1514;''' (spelled ''[[tav]]'') is the twentysecond letter of the [[Hebrew]] alphabet.
 
 * '''Last''': [[&#1513;]]
 
