bad counting <tav#65378>

--- a/wiki/tav.wikitext
+++ b/wiki/tav.wikitext
@@ -4,4 +4,4 @@
 
 '''tav''', also '''taw'''
 
-# The twentythird letter of the [[Hebrew]] alphabet, [[&#1514;]].
+# The twentysecond letter of the [[Hebrew]] alphabet, [[&#1514;]].
