bad counting <shin#65383>

--- a/wiki/shin.wikitext
+++ b/wiki/shin.wikitext
@@ -4,7 +4,7 @@
 
 '''shin''' (plural: [[shins]])
 
-# The twentysecond letter of the [[Hebrew]] alphabet, [[&#1513;]].
+# The twentyfirst letter of the [[Hebrew]] alphabet, [[&#1513;]].
 
 ===Etymology===
 
