--- a/wiki/sade.wikitext
+++ b/wiki/sade.wikitext
@@ -1,1 +1,9 @@
-#REDIRECT [[sadhe]]
+===Noun===
+#A variant spelling of [[sadhe]]
+
+===Proper noun===
+
+# Marquis de Sade
+
+===Related terms===
+*[[sadism]]
