+ja compound; wikification <風#31280>

--- a/wiki/%E9%A2%A8.wikitext
+++ b/wiki/%E9%A2%A8.wikitext
@@ -17,10 +17,9 @@
 *# [[air]]
 *# [[manners]], [[atmosphere]]
 
-
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -39,19 +38,22 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ふう]] (fū), [[ふ]] (fu)
 ** '''[[Kun]]''': [[かぜ]] (kaze)
 
+* '''Compounds''':
+** [[神風]] (kamikaze): [[kamikaze]]
+
 * '''Other info''':  
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 풍
+* '''[[Hangeul]]''': [[풍]]
 
 * '''[[Eumhun]] reading''': 
 
