move some stuff from def to etym; but japanese term in def doesn't help us who don't read japanese <神風#65486>

--- a/wiki/%E7%A5%9E%E9%A2%A8.wikitext
+++ b/wiki/%E7%A5%9E%E9%A2%A8.wikitext
@@ -1,4 +1,8 @@
 ==Japanese==
+===Etymology===
+[[神]] ''kami'' "god" + [[風]] ''kaze'' "wind"
+
+===Noun===
 '''[[神]][[風]]'''
 
-# spiritual wind, '' kami'' "god" +''kaze'' "wind" ie ''[[kamikaze]]'', originally blew in [[元寇]]
+# spiritual wind, ''[[kamikaze]]'', originally blew in [[元寇]]
