misunderestimate not coined by G.W. <misunderestimate#64173>

--- a/wiki/misunderestimate.wikitext
+++ b/wiki/misunderestimate.wikitext
@@ -2,7 +2,7 @@
 
 ===Etymology===
 
-Coined by U.S. president George W. Bush (date?) as an inadvertent blend of [[misunderstand]] and [[underestimate]]
+Coined by the TV-show [[w:Saturday Night Live|Saturday Night Live]], parodying George W. Bush's tendency to misuse and make up words. A combination of the words [[misunderstand]] and [[underestimate]].
 
 ===Verb===
 # To underestimate by failing to understand.
