--- a/wiki/shrub.wikitext
+++ b/wiki/shrub.wikitext
@@ -14,7 +14,7 @@
 ** Comparable to [[Sirup]], [[Sherbet]]
 
 ===Noun===
-'''shrub'''
+'''shrub''' (plural: [[shrubs]])
 
 # A woody plant of less size than a tree, and usually with several stems from the same root.
 # A liquor composed of vegetable acid, especially lemon juice, and sugar, with spirit to preserve it.
