/* Noun phrase */ <soda pop#45840>

--- a/wiki/soda_pop.wikitext
+++ b/wiki/soda_pop.wikitext
@@ -5,6 +5,7 @@
 # (''regional in US'') Any of several [[sweeten]]ed, [[carbonated]] [[beverage]]s.
 #: ''On a hot day, there's nothing I like more than soda pop.''
 #: ''Could you bring me a soda pop?  I'm parched!''
+#: In the Midwest, soda pop is abbreviated to pop, such as ''Do you have any pop?''
 
 ====Synonyms====
 *[[pop]]
