--- a/wiki/beth.wikitext
+++ b/wiki/beth.wikitext
@@ -5,3 +5,8 @@
 '''beth'''
 
 # The second letter of the Hebrew alphabet, [[&#1489;]].
+
+===Proper noun===
+'''Beth'''
+
+# a nickname of [[Elizabeth]]
