--- a/wiki/soda_pop.wikitext
+++ b/wiki/soda_pop.wikitext
@@ -6,6 +6,9 @@
 #: ''On a hot day, there's nothing I like more than soda pop.''
 #: ''Could you bring me a soda pop?  I'm parched!''
 #: In the Midwest, soda pop is abbreviated to pop, such as ''Do you have any pop?''
+#: Further, in the Midwest, soda means an ice cream soda (pop with ice cream), such as ''I think I will have a root beer soda.'' (vanilla ice cream in root beer pop).
+#: On the east and west coasts, soda pop is abbreviated to soda, such as "May I have a soda?"
+
 
 ====Synonyms====
 *[[pop]]
