--- a/wiki/%E7%A5%9E%E9%A2%A8.wikitext
+++ b/wiki/%E7%A5%9E%E9%A2%A8.wikitext
@@ -5,4 +5,4 @@
 ===Noun===
 '''[[神]][[風]]'''
 
-# spiritual wind, ''[[kamikaze]]'', originally blew in [[元寇]]
+# spiritual wind, ''[[kamikaze]]'', originally blew in the Mongolian invasion ([[元寇]], [[w:ja:元寇]])
