--- a/wiki/%E9%A2%A8.wikitext
+++ b/wiki/%E9%A2%A8.wikitext
@@ -44,8 +44,29 @@
 ** '''[[On]]''': [[ふう]] (fū), [[ふ]] (fu)
 ** '''[[Kun]]''': [[かぜ]] (kaze)
 
-* '''Compounds''':
-** [[神風]] (kamikaze): [[kamikaze]]
+===Compounds===
+*[[風圧]]
+*[[風雲]]
+*[[風化]]
+*[[風害]]
+*[[風紀]]
+*[[風景]]
+*[[風月]]
+*[[風車]]
+*[[風習]]
+*[[風塵]]
+*[[風雪]]
+*[[風俗]]
+*[[風袋]]
+*[[風潮]]
+*[[風体]]
+*[[風土]]
+*[[風物]]
+*[[風味]]
+*[[風流]]
+*[[風邪]]
+*[[風呂]]
+* [[神風]] (kamikaze): [[kamikaze]]
 
 * '''Other info''':  
 
