--- a/wiki/-in%27.wikitext
+++ b/wiki/-in%27.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-Representation of a pronunciation of [[-ing]] with the /ŋ/ replaced by /n/.
+[[Elided]] pronunciation of [[-ing]] with the /ŋ/ replaced by /n/.
 
 ===Suffix===
 '''-in''''
