--- a/wiki/%E5%8D%B0.wikitext
+++ b/wiki/%E5%8D%B0.wikitext
@@ -26,6 +26,52 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': yan3
 
+===Compounds===
+*[[印把子]]
+*[[印版]]
+*[[印本]]
+*[[印鼻]]
+*[[印材]]
+*[[印次]]
+*[[印第安人]]
+*[[印度]]
+*[[印度教]]
+*[[印度尼西亚]]
+*[[印发]]
+*[[印盒]]
+*[[印痕]]
+*[[印花]], [[印花儿]]
+*[[印记]]
+*[[印迹]]
+*[[印鉴]]
+*[[印尼]]
+*[[印泥]]
+*[[印钮]], [[印纽]]
+*[[印谱]]
+*[[印染]]
+*[[印色]]
+*[[印数]]
+*[[印刷]]
+*[[印刷电路]]
+*[[印刷品]]
+*[[印刷体]]
+*[[印台]]
+*[[印堂]]
+*[[印玺]]
+*[[印匣]]
+*[[印相]]
+*[[印相纸]]
+*[[印象]]
+*[[印象派]]
+*[[印信]]
+*[[印行]]
+*[[印油]]
+*[[印张]]
+*[[印章]]
+*[[印证]]
+*[[印制]]
+*[[印子]]
+
 * '''Other info''': 
 
 ----
