--- a/wiki/cognoscere.wikitext
+++ b/wiki/cognoscere.wikitext
@@ -4,7 +4,10 @@
 
 ===Verb===
 ('''cogn&#333;sc&#333;''', '''cogn&#333;scere''', '''cogn&#333;v&#299;''',  '''cognitum''')
-# To know, as in: to recognize, to be acquainted with.
+# To [[know]], as in: to [[recognize]], to be acquainted with.
+
+===Etymology===
+''[[cum]]''' + ''[[noscere]]''
 
 ====Participles====
 <!--'''Present Active Participle:''' <big> cogn&#333;sc&#275;ns </big> : ''knowing'' <br>
@@ -237,3 +240,7 @@ cognitus/cognita/cognitum esset : ''maybe he/she/it had been known'' <br>
 cognit&#299;/cognitae/cognita ess&#275;mus : ''maybe we had been known'' <br>
 cognit&#299;/cognitae/cognita ess&#275;tis : ''maybe you (all) had been known'' <br>
 cognit&#299;/cognitae/cognita essent : ''maybe they had been known'' <br>
+
+===Related terms===
+*French: [[connaître]]
+*Italian: [[conoscere]]
