ja compounds++; wikification <神#8639>

--- a/wiki/%E7%A5%9E.wikitext
+++ b/wiki/%E7%A5%9E.wikitext
@@ -16,7 +16,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -32,23 +32,24 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[しん]] (shin), [[じん]] (jin)
 ** '''[[Kun]]''': [[かみ]] (kami), [[こう]] (kou), [[たましい]] (tamashii)
 
-*'''Example words''':
+* '''Compounds''':
 **[[神様]] (kamisama)
-**[[女神]] (megami) - goddess
+**[[神風]] (kamikaze): [[kamikaze]]
+**[[女神]] (megami): [[goddess]]
 
 * '''Other info''':  
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 신
+* '''[[Hangeul]]''': [[신]]
 
 * '''[[Eumhun]] reading''': 
 
