--- a/wiki/%E8%9C%82.wikitext
+++ b/wiki/%E8%9C%82.wikitext
@@ -10,11 +10,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': bee, wasp, hornet
+* '''Common Meaning''': [[bee]], [[wasp]], [[hornet]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -26,11 +26,35 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': fung1
 
+===Compounds===
+*[[蜂巢]]
+*[[蜂刺]]
+*[[蜂毒]]
+*[[蜂房]]
+*[[蜂糕]]
+*[[蜂集]]
+*[[蜂聚]]
+*[[蜂蜡]]
+*[[蜂蜜]]
+*[[蜂鸣器]]
+*[[蜂鸟]]
+*[[蜂农]]
+*[[蜂起]]
+*[[蜂王]]
+*[[蜂王浆]]
+*[[蜂窝]]
+*[[蜂窝煤]]
+*[[蜂舞]]
+*[[蜂箱]]
+*[[蜂响器]]
+*[[蜂拥]]
+*[[蜂子]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ほう]] (hō)
