move up etym; +wikipedia link <kamikaze#55927>

--- a/wiki/kamikaze.wikitext
+++ b/wiki/kamikaze.wikitext
@@ -1,10 +1,14 @@
 ==English==
 ===Pronunciation===
 */kæməkaːziː/
+===Etymology===
+From Japanese [[神風]] (かみかぜ, kamikaze), ''divine wind''.
+
 ===Noun===
 '''kamikaze'''
 
 #an [[attack]] requiring the [[suicide]] of the one carrying it out
 #one who makes such an attack
-===Etymology===
-From Japanese [[神風]] (かみかぜ, kamikaze), ''divine wind''.
+
+===See also===
+*[[w:Kamikaze|Wikipedia article on the kamikaze]]
