+kana/romaji <神風#65486>

--- a/wiki/%E7%A5%9E%E9%A2%A8.wikitext
+++ b/wiki/%E7%A5%9E%E9%A2%A8.wikitext
@@ -3,6 +3,6 @@
 [[神]] ''kami'' "god" + [[風]] ''kaze'' "wind"
 
 ===Noun===
-'''[[神]][[風]]'''
+'''[[神]][[風]]''' (かみかぜ, kamikaze)
 
 # spiritual wind, ''[[kamikaze]]'', originally blew in the Mongolian invasion ([[元寇]], [[w:ja:元寇]])
