--- a/wiki/%E7%A5%9E.wikitext
+++ b/wiki/%E7%A5%9E.wikitext
@@ -28,6 +28,92 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': san4
 
+===Compounds===
+*[[神奥]]
+*[[神不守舍]]
+*[[神不知，鬼不觉]]
+*[[神采]]
+*[[神差鬼使]]
+*[[神驰]]
+*[[神出鬼没]]
+*[[神道]]
+*[[神甫]]
+*[[神工鬼斧]]
+*[[神怪]]
+*[[神汉]]
+*[[神乎]]
+*[[神乎其神]]
+*[[神化]]
+*[[神话]]
+*[[神魂]]
+*[[神机妙算]]
+*[[神交]]
+*[[神经]]
+*[[神经病]]
+*[[神经错乱]]
+*[[神经过敏]]
+*[[神经衰弱]]
+*[[神经痛]]
+*[[神经系统]]
+*[[神经细胞]]
+*[[神经纤维]]
+*[[神经质]]
+*[[神经中枢]]
+*[[神龛]]
+*[[神来之笔]]
+*[[神力]]
+*[[神聊]]
+*[[神灵]]
+*[[神领]]
+*[[神秘]]
+*[[神妙]]
+*[[神明]]
+*[[神女]]
+*[[神品]]
+*[[神婆]]
+*[[神奇]]
+*[[神气]]
+*[[神枪手]]
+*[[神情]]
+*[[神曲]]
+*[[神权]]
+*[[神人]]
+*[[神色]]
+*[[神色不惊]]
+*[[神伤]]
+*[[神神叨叨]]
+*[[神圣]]
+*[[神使鬼差]]
+*[[神思]]
+*[[神似]]
+*[[神速]]
+*[[神算]]
+*[[神髓]]
+*[[神态]]
+*[[神通]]
+*[[神童]]
+*[[神往]]
+*[[神威]]
+*[[神位]]
+*[[神巫]]
+*[[神武]]
+*[[神悟]]
+*[[神仙]]
+*[[神像]]
+*[[神效]]
+*[[神学]]
+*[[神医]]
+*[[神异]]
+*[[神勇]]
+*[[神游]]
+*[[神宇]]
+*[[神韵]]
+*[[神职人员]]
+*[[神志]]
+*[[神智]]
+*[[神州]]
+*[[神主]]
+
 * '''Other info''': 
 
 ----
@@ -38,10 +124,34 @@
 ** '''[[On]]''': [[しん]] (shin), [[じん]] (jin)
 ** '''[[Kun]]''': [[かみ]] (kami), [[こう]] (kou), [[たましい]] (tamashii)
 
-* '''Compounds''':
-**[[神様]] (kamisama)
-**[[神風]] (kamikaze): [[kamikaze]]
-**[[女神]] (megami): [[goddess]]
+===Compounds===
+*[[神意]]
+*[[神威]]
+*[[神韻]]
+*[[神格]]
+*[[神学]]
+*[[神楽]]
+*[[神官]]
+*[[神器]]
+*[[神曲]]
+*[[神経]]
+*[[神権]]
+*[[神事]]
+*[[神髄]]
+*[[神聖]]
+*[[神体]]
+*[[神託]]
+*[[神通力]]
+*[[神殿]]
+*[[神道]]
+*[[神秘]]
+*[[神父]]
+*[[神霊]]
+*[[神様]] (kamisama)
+*[[神風]] (kamikaze): [[kamikaze]]
+*[[神主]]
+*[[神業]]
+*[[女神]] (megami): [[goddess]]
 
 * '''Other info''':  
 
