--- a/wiki/%E5%A2%93.wikitext
+++ b/wiki/%E5%A2%93.wikitext
@@ -10,11 +10,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': grave, tomb
+* '''Common Meaning''': [[grave]], [[tomb]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -26,11 +26,24 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': mou6
 
+===Compounds===
+*[[墓碑]]
+*[[墓道]]
+*[[墓地]]
+*[[墓碣]]
+*[[墓门]]
+*[[墓木]]
+*[[墓室]]
+*[[墓穴]]
+*[[墓园]]
+*[[墓葬]]
+*[[墓志]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ぼ]] (bo)
