--- a/wiki/%E7%9B%AE.wikitext
+++ b/wiki/%E7%9B%AE.wikitext
@@ -11,14 +11,14 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#eye
-*# look, see
-*# division, topic
+*# [[eye]]
+*# [[look]], [[see]]
+*# [[division]], [[topic]], (''biology'') [[order]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,11 +30,45 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': muk6
 
+===Compounds===
+*[[目不见睫]]
+*[[目不交睫]]
+*[[目不忍睹]]
+*[[目不识丁]]
+*[[目不暇接]]
+*[[目不斜视]]
+*[[目不转睛]]
+*[[目测]]
+*[[目次]]
+*[[目瞪口呆]]
+*[[目的]]
+*[[目的地]]
+*[[目的论]]
+*[[目睹]]
+*[[目光]]
+*[[目光如豆]]
+*[[目光如炬]]
+*[[目击]]
+*[[目见]]
+*[[目今]]
+*[[目空一切]]
+*[[目力]]
+*[[目力表]]
+*[[目录]]
+*[[目迷五色]]
+*[[目前]]
+*[[目送]]
+*[[目无法纪]]
+*[[目无余子]]
+*[[目下]]
+*[[目眩]]
+*[[目中无人]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[もく]] (moku), [[ぼく]] (boku)
