fmt; Google gives several hundred hits for this word <joygasm#65543>

--- a/wiki/joygasm.wikitext
+++ b/wiki/joygasm.wikitext
@@ -1,1 +1,8 @@
-A combination between [[joy]] and [[orgasm]].  Commonly used to express an orgasm like reaction to something non-sexual.  This word's origin is not known, but was apparantly coined to replace the word orgasm in some non-sexual contexts
+==English==
+===Etymology===
+From '''[[joy]]''' and [[orgasm|(or)gasm]]
+
+===Noun===
+'''joygasm''' (''plural'' '''joygasms''')
+
+#(''colloquial'') A feeling of great joy.
