fmt; moved translations to "surname" <family name#45260>

--- a/wiki/family_name.wikitext
+++ b/wiki/family_name.wikitext
@@ -1,13 +1,11 @@
+==English==
 ===Noun===
-<!-- definition here... -->
+'''family name''' (''plural'' '''family names''')
 
-====Translations====
-*Finnish: [[sukunimi]]
-*[[Persian]]: [[نام خانوادگی]] (nam-e khanevadegi)
+#A [[surname]].
 
 ====Synonyms====
-*[[surname]]
-*[[last name]]
+*[[last name]], [[surname]]
 
-====Related words====
-*[[first name]], [[forename]]
+===See also===
+*[[first name]], [[forename]], [[given name]]
