--- a/wiki/family_name.wikitext
+++ b/wiki/family_name.wikitext
@@ -7,5 +7,8 @@
 ====Synonyms====
 *[[last name]], [[surname]]
 
+====Translations====
+''See'' [[surname]]
+
 ===See also===
 *[[first name]], [[forename]], [[given name]]
