fmt; moved translations here from "family name" <surname#33574>

--- a/wiki/surname.wikitext
+++ b/wiki/surname.wikitext
@@ -19,7 +19,7 @@ Plural: [[surnames]]
 *French: [[surnom]] ''m'', [[nom de famille]] ''m''
 *German: [[Familienname]] ''m'', [[Nachname]] ''m''
 *Greek: [[επώνυμο]] ''n''
-*Hungarian: [[vezetéknév]] (note in Hungarian family name precedes given name)
+*Hungarian: [[vezetéknév]] (''in Hungarian, a surname precedes the given name'')
 *Italian: [[cognome]] ''m''
 *Japanese: [[姓]]; [[姓氏]] (せいし, seishi)
 *Korean: [[성]]
@@ -32,11 +32,17 @@ Plural: [[surnames]]
 *Swedish: [[efternamn]]
 
 ===See also===
-*[[Christian name]], [[first name]], [[forename]], [[given name]]
-*[[w:Name_change|Name change]] (At [[Wikipedia]]), [[bride's name]], [[adoption name]]
+*[[adoption name]]
+*[[bride's name]]
+*[[Christian name]]
 *[[confirmation name]]
-*[[matronymic]]
+*[[first name]]
+*[[forename]]
+*[[given name]]
+*[[maiden name]]
+*[[matronym]]
 *[[middle name]]
 *[[nickname]]
-*[[patronymic]]
+*[[patronym]]
+*[[w:Name_change|Wikipedia article on name changes]]
 *[[w:Surname|Wikipedia article on surnames]]
