fmt; moved translations here from "family name"; +IPA and SAMPA; fixed AHD <surname#33574>

--- a/wiki/surname.wikitext
+++ b/wiki/surname.wikitext
@@ -1,12 +1,16 @@
 ==English==
 ===Pronunciation===
-[[AHD]]: sûr'nām'
+*[[AHD]]: sûr'nām
+*[[IPA]]: /ˈsɜː(r)neɪm/
+*[[SAMPA]]: /<tt>"s3:(r)neIm</tt>/
+
+===Hyphenation===
+sur&middot;name
 
 ===Noun===
-'''surname''' (sur&middot;name)
+'''surname''' (''plural'' '''[[surnames]]''')
 
-Plural: [[surnames]]
-#A name that indicates to which [[family]] a person belongs, in English usually written after that person's [[given name]]s. (See [[Wiktionary_Appendix:Surnames|Surnames Appendix]])
+#A name that indicates to which [[family]] a person belongs, in English usually written after that person's [[given name]](s). 
 
 ====Synonyms====
 *[[family name]], [[last name]]
@@ -46,3 +50,4 @@ Plural: [[surnames]]
 *[[patronym]]
 *[[w:Name_change|Wikipedia article on name changes]]
 *[[w:Surname|Wikipedia article on surnames]]
+*[[Wiktionary_Appendix:Surnames|Wiktionary appendix of surnames]])
