fmt; usage note; moved translations to "surname" <last name#4104>

--- a/wiki/last_name.wikitext
+++ b/wiki/last_name.wikitext
@@ -1,20 +1,17 @@
-==Noun==
+==English==
+===Noun===
+'''last name''' (''plural'' '''last names''')
 
-Usually the name a person receives from its father. In Spain, Portugal and most Latin America countries a person gets the first parts of the last names of both the father and the mother.
+#A surname.
 
-===Synonyms===
-[[surname]], [[family name]]
+====Usage note====
+*A '''last name''' is so called because it is written last, that is, after the [[given name]]s, in English.  However, this many other languages and cultures write this name first; in these cases, the terms ''surname'' or ''family name'' are more appropriate.
 
-===Translations===
-*Dutch: [[achternaam]] ''m'', [[familienaam]] ''m''
-*Finnish: [[sukunimi]]
-*French: [[nom]] ''m'', [[nom de famille]] ''m''
-*German: [[Nachname]] ''m'', [[Familienname]] ''m''
-*Interlingua: [[supernomine]], [[nomine de familia]], [[ultime nomine]]
-*Japanese: [[名字]](myouji), [[姓]] (sei) 
-*Korean: [[성]] [姓] (seong)
-*Polish: [[nazwisko]] ''n''
-*Portuguese: [[sobrenome]] ''m'', [[nome de família]] ''m'', [[apelido]] ''m'', [[último nome]] ''m''
+====Synonyms====
+*[[family name]], [[surname]]
 
-===Related words=== 
-*[[first name]], [[forename]]
+====Translations====
+''See'' [[surname]]
+
+===See also=== 
+*[[first name]], [[forename]], [[given name]]
