moved translations here from "last name" <surname#33574>

--- a/wiki/surname.wikitext
+++ b/wiki/surname.wikitext
@@ -24,11 +24,13 @@ sur&middot;name
 *German: [[Familienname]] ''m'', [[Nachname]] ''m''
 *Greek: [[επώνυμο]] ''n''
 *Hungarian: [[vezetéknév]] (''in Hungarian, a surname precedes the given name'')
+*[[Interlingua]]: [[supernomine]], [[nomine de familia]], [[ultime nomine]]
 *Italian: [[cognome]] ''m''
-*Japanese: [[姓]]; [[姓氏]] (せいし, seishi)
-*Korean: [[성]]
+*Japanese: [[姓]]; [[姓氏]] (せいし, seishi), Japanese: [[名字]] (myouji: a last name), [[姓]] (sei: a last name) 
+*Korean: [[성]], [[성]] [姓] (seong)
 *[[Persian]]: [[نام خانوادگی]] (nam-e khanevadegi)
-*Portuguese: [[sobrenome]] ''m''
+*Polish: [[nazwisko]] ''n''
+*Portuguese: [[sobrenome]] ''m'', [[nome de família]] ''m'', [[apelido]] ''m'', [[último nome]] ''m'' (''when appearing last'')
 *Russian: [[фамилия]] ''f'' (familiya)
 *Slovak: [[priezvisko]] ''n''
 *[[Slovene]]: [[priimek]] ''m''
