--- a/wiki/surname.wikitext
+++ b/wiki/surname.wikitext
@@ -27,7 +27,7 @@ sur&middot;name
 *[[Interlingua]]: [[supernomine]], [[nomine de familia]], [[ultime nomine]]
 *Italian: [[cognome]] ''m''
 *Japanese: [[姓]]; [[姓氏]] (せいし, seishi), Japanese: [[名字]] (myouji: a last name), [[姓]] (sei: a last name) 
-*Korean: [[성]], [[성]] [姓] (seong)
+*Korean: [[성]], [[姓]] (seong)
 *[[Persian]]: [[نام خانوادگی]] (nam-e khanevadegi)
 *Polish: [[nazwisko]] ''n''
 *Portuguese: [[sobrenome]] ''m'', [[nome de família]] ''m'', [[apelido]] ''m'', [[último nome]] ''m'' (''when appearing last'')
