--- a/wiki/%E7%A7%91.wikitext
+++ b/wiki/%E7%A7%91.wikitext
@@ -10,11 +10,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': section, department, science
+* '''Common Meaning''': [[section]], [[department]], [[science]], (''biology'') [[family]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -26,11 +26,48 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': fo1
 
+===Compounds===
+*[[科白]]
+*[[科班]], [[科班儿]]
+*[[科处]]
+*[[科第]]
+*[[科幻]]
+*[[科幻小说]]
+*[[科技]]
+*[[科技扶贫]]
+*[[科甲]]
+*[[科教]]
+*[[科教片儿]]
+*[[科教片]]
+*[[科举]]
+*[[科林斯]]
+*[[科盲]]
+*[[科摩罗]]
+*[[科目]]
+*[[科派]]
+*[[科普]]
+*[[科室]]
+*[[科特迪瓦]]
+*[[科头跣足]]
+*[[科威特]]
+*[[科西嘉岛]]
+*[[科刑]]
+*[[科学]]
+*[[科学城]]
+*[[科学共产主义]]
+*[[科学家]]
+*[[科学教育影片]]
+*[[科学社会主义]]
+*[[科学学]]
+*[[科学院]]
+*[[科研]]
+*[[科长]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[か]] (ka)
