--- a/wiki/surname.wikitext
+++ b/wiki/surname.wikitext
@@ -26,7 +26,7 @@ sur&middot;name
 *Hungarian: [[vezetéknév]] (''in Hungarian, a surname precedes the given name'')
 *[[Interlingua]]: [[supernomine]], [[nomine de familia]], [[ultime nomine]]
 *Italian: [[cognome]] ''m''
-*Japanese: [[姓]]; [[姓氏]] (せいし, seishi), Japanese: [[名字]] (myouji: a last name), [[姓]] (sei: a last name) 
+*Japanese: [[姓]] (せい, sei), Japanese: [[名字]] or [[苗字]] (みょうじ, myouji)
 *Korean: [[성]], [[姓]] (seong)
 *[[Persian]]: [[نام خانوادگی]] (nam-e khanevadegi)
 *Polish: [[nazwisko]] ''n''
