fmt; changed link to "whores" to link to singular; etym <whoremonger#65520>

--- a/wiki/whoremonger.wikitext
+++ b/wiki/whoremonger.wikitext
@@ -1,1 +1,8 @@
-A frequent customer of [[whores]],a [[fornicator]].
+==English==
+===Etymology===
+[[whore]] + [[monger]]
+
+===Noun===
+'''whoremonger''' (''plural'' '''whoremongers''')
+
+#A frequent customer of [[whore]]s.
