fmt; capitalised "Jewish"; linked to singular noun <Jewry#65528>

--- a/wiki/Jewry.wikitext
+++ b/wiki/Jewry.wikitext
@@ -1,1 +1,5 @@
-[[Jews]] in general,the jewish population of a locale.
+==English==
+===Proper noun===
+'''Jewry'''
+
+#[[Jews]] in general; the [[Jewish]] population of a locale.
