--- a/wiki/Jewry.wikitext
+++ b/wiki/Jewry.wikitext
@@ -2,4 +2,4 @@
 ===Proper noun===
 '''Jewry'''
 
-#[[Jews]] in general; the [[Jewish]] population of a locale.
+#[[Jew]]s in general; the [[Jewish]] population of a locale.
