fmt; linked to singular noun; +it: translation <Jewish#65531>

--- a/wiki/Jewish.wikitext
+++ b/wiki/Jewish.wikitext
@@ -1,1 +1,8 @@
-Of the [[Jews]],their religion and culture.
+==English==
+===Noun===
+'''Jewish''' (''[[comparative]]'' '''more Jewish''', ''[[superlative]]'' '''most Jewish''')
+
+#Of or relating to [[Jew]]s, their religion or their culture.
+
+====Translations====
+*Italian: [[ebreo]] ''m'', ebrea ''f''
