fmt; etym; +pronunciation <Xmas#65523>

--- a/wiki/Xmas.wikitext
+++ b/wiki/Xmas.wikitext
@@ -1,1 +1,13 @@
-Abreviation for [[Christmas]]
+==English==
+===Pronunciation===
+*[[IPA]]: /ˈkrɪsməs/, /ˈeksməs/
+*[[SAMPA]]: /"krIsm@s/, /"eksm@s/
+*[[AHD]]: /krĭs'məs/, /eks'məs/
+
+===Etymology===
+From [[Christmas]], with [[X]] (a cross) representing [[Christ]].
+
+===Abbreviation===
+'''Xmas'''
+
+#[[Christmas]]
