fmt; syn; translations from Wikipedia <Sherlock Holmes#65495>

--- a/wiki/Sherlock_Holmes.wikitext
+++ b/wiki/Sherlock_Holmes.wikitext
@@ -1,2 +1,55 @@
-A fictional detective invented by Sir Arthur Conan Doyle.
-*External link:[http://en.wikipedia.org/wiki/Sherlock_Holmes See article at Wikipedia]
+==English==
+===Proper noun===
+'''Sherlock Holmes'''
+
+#A fictional detective in the novels by [[w:Sir Arthur Conan Doyle|Arthur Conan Doyle]].
+#By extension, any person who has or is considered to have great powers of deduction.
+
+====Synonyms====
+*(''person with great powers of deduction''): [[Sherlock]]
+
+====Translations====
+
+'''fictional detective'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*[[Catalan]]: Sherlock Holmes
+*Chinese: [[歇洛克·福尔摩斯]]
+*Danish: Sherlock Holmes
+*Dutch: Sherlock Holmes
+*Finnish: Sherlock Holmes
+*French: Sherlock Holmes
+*German: Sherlock Holmes
+*Hebrew: [[שרלוק הולמס]]
+*Italian: Sherlock Holmes
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+*Japanese: [[シャーロック・ホームズ]]
+*Portuguese: Sherlock Holmes
+*Spanish: Sherlock Holmes
+*Swedish: Sherlock Holmes
+|}
+|}
+
+'''person with great powers of deduction'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+===See also===
+*[[w:Sherlock_Holmes|Sherlock Holmes]]
