fmt; syn; translations from Wikipedia <Sherlock Holmes#65495>

--- a/wiki/Sherlock_Holmes.wikitext
+++ b/wiki/Sherlock_Holmes.wikitext
@@ -3,7 +3,7 @@
 '''Sherlock Holmes'''
 
 #A fictional detective in the novels by [[w:Sir Arthur Conan Doyle|Arthur Conan Doyle]].
-#By extension, any person who has or is considered to have great powers of deduction.
+#(''figuratively'') By extension, any person who has or is considered to have great powers of deduction.
 
 ====Synonyms====
 *(''person with great powers of deduction''): [[Sherlock]]
