--- a/wiki/%E5%A4%B4.wikitext
+++ b/wiki/%E5%A4%B4.wikitext
@@ -35,6 +35,85 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[頭]]
 
+===Compounds===
+*[[头班车]]
+*[[头版]]
+*[[头半天]]
+*[[头部]]
+*[[头彩]]
+*[[头茬]]
+*[[头筹]]
+*[[头等]]
+*[[头顶]]
+*[[头发]]
+*[[头盖]]
+*[[头盖骨]]
+*[[头高头低]]
+*[[头功]]
+*[[头骨]]
+*[[头号]]
+*[[头回生，二回熟]]
+*[[头昏]]
+*[[头昏目眩]]
+*[[头昏脑胀]]
+*[[头昏眼花]]
+*[[头奖]]
+*[[头角]]
+*[[头角峥嵘]]
+*[[头巾]]
+*[[头颈]]
+*[[头会箕敛]]
+*[[头盔]]
+*[[头里]]
+*[[头脸]]
+*[[头领]]
+*[[头颅]]
+*[[头路]]
+*[[头面]]
+*[[头面人物]]
+*[[头名]]
+*[[头目]]
+*[[头脑]]
+*[[头年]]
+*[[头牌]]
+*[[头皮]]
+*[[头破血流]]
+*[[头前]]
+*[[头球]]
+*[[头人]]
+*[[头纱]]
+*[[头晌]]
+*[[头晌案头]]
+*[[头上长角，身上长刺]]
+*[[头绳]], [[头绳儿]]
+*[[头虱]]
+*[[头饰]]
+*[[头水]], [[头水儿]]
+*[[头胎]]
+*[[头套]]
+*[[头疼]]
+*[[头疼脑热]], [[头疼脑热的]]
+*[[头天]]
+*[[头条新闻]]
+*[[头痛]]
+*[[头痛医头，脚痛医脚]]
+*[[头头儿]]
+*[[头头是道]]
+*[[头晚]]
+*[[头尾]]
+*[[头衔]]
+*[[头像]]
+*[[头屑]]
+*[[头胸部]]
+*[[头绪]]
+*[[头雁]]
+*[[头油]]
+*[[头晕]]
+*[[头晕眼花]]
+*[[头遭]]
+*[[头重脚轻]]
+*[[头子]]
+
 * '''Other info''': 
 
 ----
