--- a/wiki/%E6%A0%BC.wikitext
+++ b/wiki/%E6%A0%BC.wikitext
@@ -11,13 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#pattern, standard, form
-*# style
+*# [[pattern]], [[standard]], [[form]]
+*# [[style]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,11 +29,34 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': gaak3
 
+===Compounds===
+#gē
+#*[[格登]]
+#*[[格格]]
+#gé
+#*[[格调]]
+#*[[格斗]]
+#*[[格格不入]]
+#*[[格局]]
+#*[[格楞]]
+#*[[格林纳达]]
+#*[[格林尼治时间]]
+#*[[格鲁吉亚]]
+#*[[格律]]
+#*[[格杀勿论]]
+#*[[格式]]
+#*[[格式化]]
+#*[[格外]]
+#*[[格物]]
+#*[[格言]]
+#*[[格致]]
+#*[[格子]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[こう]] (kō), [[かく]] (kaku), [[きゃく]] (kyaku)
