--- a/wiki/function.wikitext
+++ b/wiki/function.wikitext
@@ -21,7 +21,7 @@ IPA: /ˈfʌŋk.ʃən/
 *Finnish: [[funktio]] (1, 2, 3); [[tarkoitus]] (1)
 *French: [[fonction]] ''f'' (1, 2)
 *German: [[Funktion]] ''f'' (1, 2, 3)
-*Hebrew: [[פונקטיה]] ''f'' (1, 2, 3)
+*Hebrew: [[פונקציה]] ''f'' (1, 2, 3)
 *[[Interlingua]]: function (1, 2, 3)
 *{{ga}}: [[feidhm]]
 *Italian: [[funzione]] ''f'' (1)
