--- a/wiki/%E6%B5%81.wikitext
+++ b/wiki/%E6%B5%81.wikitext
@@ -19,7 +19,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -31,11 +31,109 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': lau4
 
+===Compounds===
+*[[流弊]]
+*[[流播]]
+*[[流布]]
+*[[流产]]
+*[[流畅]]
+*[[流程]]
+*[[流程图]]
+*[[流传]]
+*[[流窜]]
+*[[流弹]]
+*[[流荡]]
+*[[流动]]
+*[[流动资产]]
+*[[流动资金]]
+*[[流毒]]
+*[[流芳]]
+*[[流放]]
+*[[流感]]
+*[[流光]]
+*[[流汗]]
+*[[流滑]]
+*[[流火]]
+*[[流金烁石]]
+*[[流寇]]
+*[[流览]]
+*[[流浪]]
+*[[流泪]]
+*[[流离]]
+*[[流离失所]]
+*[[流离流气]], [[流离流气的]]
+*[[流利]]
+*[[流连]]
+*[[流量]]
+*[[流露]]
+*[[流落]]
+*[[流氓]]
+*[[流氓无产者]]
+*[[流民]]
+*[[流脑]]
+*[[流年]]
+*[[流派]]
+*[[流盼]]
+*[[流配]]
+*[[流气]]
+*[[流洒]]
+*[[流散]]
+*[[流沙]]
+*[[流失]]
+*[[流失生]]
+*[[流食]]
+*[[流矢]]
+*[[流势]]
+*[[流逝]]
+*[[流水]]
+*[[流水不腐，户枢不蠹]]
+*[[流水席]]
+*[[流水线]]
+*[[流水账]]
+*[[流水作业]]
+*[[流送]]
+*[[流苏]]
+*[[流俗]]
+*[[流速]]
+*[[流淌]]
+*[[流体]]
+*[[流体力学]]
+*[[流通]]
+*[[流通体制]]
+*[[流亡]]
+*[[流网]]
+*[[流线型]]
+*[[流向]]
+*[[流泻]]
+*[[流星]]
+*[[流星赶月]]
+*[[流星雨]]
+*[[流刑]]
+*[[流行]]
+*[[流行病]]
+*[[流行歌曲]]
+*[[流行色]]
+*[[流行性感冒]]
+*[[流行性脑脊髓膜炎]]
+*[[流行性腮腺炎]]
+*[[流行性乙型脑炎]]
+*[[流血]]
+*[[流言]]
+*[[流言飞语]]
+*[[流溢]]
+*[[流萤]]
+*[[流于]]
+*[[流域]]
+*[[流贼]]
+*[[流质]]
+*[[流注]]
+*[[流转]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[りゅう]] (ryū), [[る]] (ru)
