<ウィクショナリー#65553>

--- a/wiki/%E3%82%A6%E3%82%A3%E3%82%AF%E3%82%B7%E3%83%A7%E3%83%8A%E3%83%AA%E3%83%BC.wikitext
+++ b/wiki/%E3%82%A6%E3%82%A3%E3%82%AF%E3%82%B7%E3%83%A7%E3%83%8A%E3%83%AA%E3%83%BC.wikitext
@@ -1,9 +1,8 @@
-1.Merry christmas and a happy new year!
+==Japanese==
+===Noun===
+'''ウィクショナリー'''
 
-2. I love you
+# [[Wiktionary]]
 
-3. She sings well.
-
-4. you are beautiful
-
-5. The childs toy is new.
+===Variant spelling===
+*[[ウィクショナリ]]
