--- a/wiki/%E6%99%AE%E9%80%9A%E8%AF%9D.wikitext
+++ b/wiki/%E6%99%AE%E9%80%9A%E8%AF%9D.wikitext
@@ -1,3 +1,10 @@
-1. Christmas                2. House	               3. boy
-4. girl
-5. birthday
+==Chinese==
+===Noun===
+'''[[普]][[通]][[话]]''' (putonghua)
+
+# [[Mandarin]] Chinese
+
+===See also===
+*[[汉语]]
+*[[中国话]]
+*[[中文]]
