--- a/wiki/cedilla.wikitext
+++ b/wiki/cedilla.wikitext
@@ -1,4 +1,8 @@
 ===Etymology===
 Spanish ''cedilla'', diminutive of ''ceta'', ''zeta'', the letter ''z''.
 ===Noun===
-#A mark placed under the letter ''c'' in French and Portuguese to indicate that it is pronounced before ''a'', ''o'', or ''u'' as it would be before ''e'' or ''i'': ''menaçant'', ''almoço''.
+#A mark placed under the letter ''c'' in French and Portuguese to indicate that it is pronounced before ''a'', ''o'', or ''u'' as it would be before ''e'' or ''i'': ''menaçant'', ''almoço''. [[Ç]].
+
+===Translations===
+*French: [[cédille]] ''f''
+*Italian: [[cediglia]] ''f''
