--- a/wiki/%E8%83%9C.wikitext
+++ b/wiki/%E8%83%9C.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#victory
-*# excel, be better than
+*# [[victory]]
+*# [[excel]], be better than
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,6 +33,24 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[勝]]
+
+===Compounds===
+*[[胜地]]
+*[[胜负]]
+*[[胜过]]
+*[[胜迹]]
+*[[胜景]]
+*[[胜境]]
+*[[胜局]]
+*[[胜利]]
+*[[胜利果实]]
+*[[胜券]]
+*[[胜任]]
+*[[胜似]]
+*[[胜诉]]
+*[[胜算]]
+*[[胜于]]
+*[[胜仗]]
 
 * '''Other info''': 
 
