--- a/wiki/degree.wikitext
+++ b/wiki/degree.wikitext
@@ -23,3 +23,4 @@
 *Romanian: [[grad]] ''m'' (1, 2, 3), [[grad]] [[academic]] ''m'' (4)
 *Slovak: [[stupeň]] ''m'' (1, 2, 3), [[titul]] ''m'' (4)
 *Swedish: [[grad]] (1,2,3)
+*Turkish: [[derece]] (1, 2, 3, 4)
