--- a/wiki/%E5%92%96.wikitext
+++ b/wiki/%E5%92%96.wikitext
@@ -10,15 +10,15 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': coffee
+* '''Common Meaning''': [[coffee]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': kā (ka1)
+*** '''[[Pinyin]]''': gā (ga1), kā (ka1)
 *** '''[[Wade-Giles]]''': k'a<sup>1</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
@@ -26,11 +26,21 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': ga3, ka1
 
+===Compounds===
+#gā
+#*[[咖喱]]
+#kā
+#*[[咖啡]]
+#*[[咖啡碱]]
+#*[[咖啡色]]
+#*[[咖啡厅]]
+#*[[咖啡因]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[か]] (ka)
