--- a/wiki/%E8%A6%86.wikitext
+++ b/wiki/%E8%A6%86.wikitext
@@ -13,15 +13,15 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#cover
-*# tip over
-*# return
-*# reply
+*# [[cover]]
+*# [[tip over]]
+*# [[return]]
+*# [[reply]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -36,11 +36,27 @@
 * '''Style''': [[Traditional Chinese]] 
 ** '''[[Simplified Chinese|Simplified]] equivalent''': [[复]]
 
+===Compounds===
+*[[覆败]]
+*[[覆被]]
+*[[覆蔽]]
+*[[覆巢无完卵]]
+*[[覆车之戒]]
+*[[覆盖]]
+*[[覆盖面]]
+*[[覆灭]]
+*[[覆没]]
+*[[覆盆之冤]]
+*[[覆水难收]]
+*[[覆亡]]
+*[[覆雨翻云]]
+*[[覆辙]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ふく]] (fuku), [[ふう]] (fū)
