--- a/wiki/%E5%BE%81.wikitext
+++ b/wiki/%E5%BE%81.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': invade, attack, conquer
+* '''Common Meaning''': [[invade]], [[attack]], [[conquer]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -31,11 +31,41 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[徵]]
 
+===Compounds===
+*[[征兵]]
+*[[征兵制]]
+*[[征程]]
+*[[征调]]
+*[[征订]]
+*[[征发]]
+*[[征伐]]
+*[[征服]]
+*[[征稿]]
+*[[征购]]
+*[[征候]]
+*[[征婚]]
+*[[征集]]
+*[[征募]]
+*[[征聘]]
+*[[征求]]
+*[[征收]]
+*[[征税]]
+*[[征讨]]
+*[[征途]]
+*[[征文]]
+*[[征象]]
+*[[征询]]
+*[[征引]]
+*[[征用]]
+*[[征战]]
+*[[征召]]
+*[[征兆]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[せい]] (sei)
