sep defs for kamikaze and shinpu; probably not quite right yet <神風#65486>

--- a/wiki/%E7%A5%9E%E9%A2%A8.wikitext
+++ b/wiki/%E7%A5%9E%E9%A2%A8.wikitext
@@ -1,8 +1,17 @@
 ==Japanese==
-===Etymology===
-[[神]] ''kami'' "god" + [[風]] ''kaze'' "wind"
+<!-- ===Etymology===
+[[神]] ''kami'' "god" + [[風]] ''kaze'' "wind"-->
 
 ===Noun===
 '''[[神]][[風]]''' (かみかぜ, kamikaze)
 
-# spiritual wind, ''[[kamikaze]]'', originally blew in the Mongolian invasion ([[元寇]], [[w:ja:元寇]])
+# Literally "divine wind", a name given to a [[typhoon]] that saved Japan from a [[Mongol]] invasion in 1281.
+
+===Noun===
+'''[[神]][[風]]''' (しんぷう, shinpū)
+
+# Aircraft suicide attacks or attackers in Word War II.
+
+===See also===
+*[[神風特別攻撃隊]] (shinpū tokubetsu kōgeki tai)
+*[[特攻隊]] (tokkōtai)
