--- a/wiki/%E5%BE%B5.wikitext
+++ b/wiki/%E5%BE%B5.wikitext
@@ -1,4 +1,4 @@
-* '''Alternate form''': [[征]]
+* '''Alternate form''': [[徴]], [[征]]
 
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 60''': [[Wiktionary:Chinese radical index 彳|彳]]+12 strokes
 
@@ -10,16 +10,15 @@
 
 * '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 竹人山土大 (HOUGK)
 
-* '''Graphical Significance and Origin''': 
+* '''Graphical Significance and Origin''': [[微]] + [[壬
 
 * '''Common Meaning'''
-*#summon, recruit
+*# [[summon]], [[recruit]]
 *# musical note
-
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -38,11 +37,13 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ちょう]] (chō), [[ち]] (chi)
 ** '''[[Kun]]''': [[しるし]] (shirushi), [[めす]] (mesu)
+
+* Shinjitai: [[徴]]
 
 * '''Other info''':  
 
