--- a/wiki/%E5%BE%B5.wikitext
+++ b/wiki/%E5%BE%B5.wikitext
@@ -10,7 +10,7 @@
 
 * '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 竹人山土大 (HOUGK)
 
-* '''Graphical Significance and Origin''': [[微]] + [[壬
+* '''Graphical Significance and Origin''': [[微]] + [[壬]]
 
 * '''Common Meaning'''
 *# [[summon]], [[recruit]]
