--- a/wiki/%E7%A5%9E%E9%A2%A8.wikitext
+++ b/wiki/%E7%A5%9E%E9%A2%A8.wikitext
@@ -5,7 +5,7 @@
 ===Noun===
 '''[[神]][[風]]''' (かみかぜ, kamikaze)
 
-# Literally "divine wind", a name given to a [[typhoon]] that saved Japan from a [[Mongol]] invasion in 1281.
+# Literally "divine wind", a name given to a [[typhoon]] that saved Japan from a [[Mongol]] invasion in 1274, 1281.
 
 ===Noun===
 '''[[神]][[風]]''' (しんぷう, shinpū)
