see also++; +translations <神風#65486>

--- a/wiki/%E7%A5%9E%E9%A2%A8.wikitext
+++ b/wiki/%E7%A5%9E%E9%A2%A8.wikitext
@@ -5,13 +5,18 @@
 ===Noun===
 '''[[神]][[風]]''' (かみかぜ, kamikaze)
 
-# Literally "divine wind", a name given to a [[typhoon]] that saved Japan from a [[Mongol]] invasion in 1274, 1281.
+# Literally "divine wind", a name given to a [[typhoon]] that saved Japan from a [[Mongol]] invasion in the 13th century.
 
 ===Noun===
 '''[[神]][[風]]''' (しんぷう, shinpū)
 
 # Aircraft suicide attacks or attackers in Word War II.
 
+====Translations====
+*English: [[kamikaze]]
+
 ===See also===
 *[[神風特別攻撃隊]] (shinpū tokubetsu kōgeki tai)
+*[[切腹]] (seppuku)
 *[[特攻隊]] (tokkōtai)
+*[[腹切]] (hara-kiri)
