/* See also */ ++ <kamikaze#55927>

--- a/wiki/kamikaze.wikitext
+++ b/wiki/kamikaze.wikitext
@@ -11,4 +11,7 @@ From Japanese [[神風]] (かみかぜ, kamikaze), ''divine wind''.
 #one who makes such an attack
 
 ===See also===
+*[[hara-kiri]]
+*[[seppuku]]
+*[[suicide]]
 *[[w:Kamikaze|Wikipedia article on the kamikaze]]
