+see also; rel++ <suicide#41878>

--- a/wiki/suicide.wikitext
+++ b/wiki/suicide.wikitext
@@ -1,3 +1,4 @@
+==English==
 ===Noun===
 '''suicide'''
 
@@ -7,10 +8,18 @@
 ====Related terms====
 *[[suicidal]]
 *[[fratricide]]
+*[[herbicide]]
 *[[infanticide]]
+*[[insecticide]]
+*[[pesticide]]
 *[[regicide]]
 
-===Translations===
+====Translations====
 *Czech: [[sebevražda]] ''f'' (1), [[sebevrah]] ''m'' (2)
 *Finnish: [[itsemurha]] (1)
 *Swedish: [[självmord]] ''n'' (1)
+
+===See also===
+*[[hara-kiri]]
+*[[kamikaze]]
+*[[seppuku]]
