/* See also */ ++ <seppuku#58527>

--- a/wiki/seppuku.wikitext
+++ b/wiki/seppuku.wikitext
@@ -19,5 +19,7 @@ From {{ja}} [[切腹]] (せっぷく, seppuku).
 
 ===See also===
 *[[bushido]]
+*[[hara-kiri]]
+*[[kamikaze]]
 *[[suicide]]
 *[[w:seppuku|Wikipedia article on Seppuku]]
