--- a/wiki/%E5%A5%BD.wikitext
+++ b/wiki/%E5%A5%BD.wikitext
@@ -11,29 +11,131 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#good, excellent, fine
-*# well
+*# [[good]], [[excellent]], [[fine]]
+*# [[well]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': hǎo (hao3)
-*** '''[[Wade-Giles]]''': hao<sup>3</sup>
+*** '''[[Pinyin]]''': hǎo (hao3), hào (hao4)
+*** '''[[Wade-Giles]]''': hao<sup>3</sup>, hao<sup>4</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
 *** '''[[Jyutping]]''':
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': hou2, hou3
 
+===Compounds===
+#hǎo
+#*[[好比]]
+#*[[好不]]
+#*[[好不容易]]
+#*[[好吃]]
+#*[[好丑]]
+#*[[好处]]
+#*[[好处费]]
+#*[[好歹]]
+#*[[好的]]
+#*[[好端端]], [[好端端的]]
+#*[[好多]]
+#*[[好法儿]]
+#*[[好感]]
+#*[[好过]]
+#*[[好汉]]
+#*[[好好儿]], [[好好儿的]]
+#*[[好好先生]]
+#*[[好喝]]
+#*[[好话]]
+#*[[好坏]]
+#*[[好货]]
+#*[[好几]]
+#*[[好家伙]]
+#*[[好景不长]]
+#*[[好久]]
+#*[[好看]]
+#*[[好赖]]
+#*[[好了伤疤忘了痛]]
+#*[[好力宝]]
+#*[[好脸]], [[好脸儿]]
+#*[[好马不吃回头草]]
+#*[[好孬]]
+#*[[好评]]
+#*[[好气儿]]
+#*[[好球]]
+#*[[好儿]]
+#*[[好惹]]
+#*[[好人]]
+#*[[好人好事]]
+#*[[好人家]], [[好人家儿]]
+#*[[好日子]]
+#*[[好容易]]
+#*[[好上加好]]
+#*[[好生]]
+#*[[好声好气]], [[好声好气的]]
+#*[[好使]]
+#*[[好事]]
+#*[[好事不出门，恶事传千里]]
+#*[[好事不宜迟]]
+#*[[好事多磨]]
+#*[[好手]], [[好手儿]]
+#*[[好受]]
+#*[[好说]]
+#*[[好说歹说]]
+#*[[好说话儿]]
+#*[[好死]]
+#*[[好似]]
+#*[[好天儿]]
+#*[[好听]]
+#*[[好玩儿]]
+#*[[好闻]]
+#*[[好戏]]
+#*[[好像]]
+#*[[好小子]]
+#*[[好笑]]
+#*[[好些]]
+#*[[好心]]
+#*[[好心不得好报]]
+#*[[好性儿]]
+#*[[好样儿的]]
+#*[[好意]]
+#*[[好意思]]
+#*[[好用]]
+#*[[好友]]
+#*[[好运]]
+#*[[好在]]
+#*[[好找]]
+#*[[好转]]
+#*[[好自为之]]
+#*[[好走]]
+#hào
+#*[[好吃]]
+#*[[好大喜功]]
+#*[[好动]]
+#*[[好高鹜远]], [[好高务远]]
+#*[[好客]]
+#*[[好奇]]
+#*[[好强]]
+#*[[好色]]
+#*[[好尚]]
+#*[[好胜]]
+#*[[好事]]
+#*[[好为人师]]
+#*[[好恶]]
+#*[[好行小惠]]
+#*[[好学]]
+#*[[好逸恶劳]]
+#*[[好战]]
+#*[[好整以暇]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[こう]] (kō)
