--- a/wiki/kamikaze.wikitext
+++ b/wiki/kamikaze.wikitext
@@ -10,6 +10,9 @@ From Japanese [[神風]] (かみかぜ, kamikaze), ''divine wind''.
 #an [[attack]] requiring the [[suicide]] of the one carrying it out
 #one who makes such an attack
 
+====Translations====
+Japanese: [[神風]] (しんぷう, shinpū) (''official''), [[特攻隊]] (とっこたい, tokkōtai) (''popular'')
+
 ===See also===
 *[[hara-kiri]]
 *[[seppuku]]
