--- a/wiki/gingko.wikitext
+++ b/wiki/gingko.wikitext
@@ -5,3 +5,9 @@
 '''gingko'''
 
 #A tree native to East Asia having fan-shaped leaves and edible, fleshy yellow seeds.
+
+===Variant spelling===
+*[[ginkgo]]
+
+===Etymology===
+Japanese [[銀杏]] (ぎんきょう, ginkyo)
