--- a/wiki/%E5%91%BD.wikitext
+++ b/wiki/%E5%91%BD.wikitext
@@ -29,6 +29,26 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': meng6, ming6
 
+===Compounds===
+*[[命案]]
+*[[命笔]]
+*[[命大]]
+*[[命定]]
+*[[命根]]
+*[[命苦]]
+*[[命令]]
+*[[命令句]]
+*[[命令主义]]
+*[[命脉]]
+*[[命名]]
+*[[命世]]
+*[[命数]]
+*[[命题]]
+*[[命途]]
+*[[命相]]
+*[[命运]]
+*[[命中]]
+
 * '''Other info''': 
 
 ----
