--- a/wiki/kamikaze.wikitext
+++ b/wiki/kamikaze.wikitext
@@ -11,7 +11,7 @@ From Japanese [[神風]] (かみかぜ, kamikaze), ''divine wind''.
 #one who makes such an attack
 
 ====Translations====
-*Japanese: [[神風]] (しんぷう, shinpū) (''official''), [[特攻隊]] (とっこたい, tokkōtai) (''popular'')
+*Japanese: [[神風]] (しんぷう, shinpū) (''official''), [[特攻隊]] (とっこうたい, tokkōtai) (''popular''), [[神風特攻隊]] (かみかぜとっこうたい)
 
 ===See also===
 *[[hara-kiri]]
